configuration for sptribs_case_api project

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -341,6 +341,12 @@ k8s/**/common/nfdiv/identity.yaml @hmcts/no-fault-divorce
 k8s/aat/cluster-**/nfdiv/ @hmcts/no-fault-divorce
 apps/nfdiv/ @hmcts/no-fault-divorce
 
+### SPECIAL TRIBUNALS
+k8s/namespaces/sptribs/ @hmcts/special_tribunals
+k8s/**/common/sptribs/identity.yaml @hmcts/special_tribunals
+k8s/aat/cluster-**/sptribs/ @hmcts/special_tribunals
+apps/sptribs/ @hmcts/special_tribunals
+
 ### PRL
 k8s/namespaces/private-law/ @hmcts/private-law
 k8s/**/common/private-law/ @hmcts/private-law
