--- a/apps/jenkins/jenkins/ptl-intsvc/jenkins.yaml
+++ b/apps/jenkins/jenkins/ptl-intsvc/jenkins.yaml
@@ -208,6 +208,18 @@ spec:
                     title: NFD Nightly Builds Dashboard
                 - buildMonitor:
                     includeRegex: >-
+                      ^HMCTS.*\/sptribs-.+\/master
+                    name: SPTRIBS
+                    recurse: true
+                    title: Special Tribunals Dashboard
+                - buildMonitor:
+                    includeRegex: >-
+                      ^HMCTS_j_to_z_Nightly\/(sptribs-.*)\/master
+                    name: Special Tribunals Nightly
+                    recurse: true
+                    title: Special Tribunals Builds Dashboard
+                - buildMonitor:
+                    includeRegex: >-
                       ^HMCTS.*\/(am-shared-infrastructure|am-org-role-mapping-service|am-role-assignment-batch-service|am-role-assignment-service|am-performance-tests|am-judicial-booking-service|am-role-assignment-batch-service|am-role-assignment-refresh-batch)\/master
                     name: AM
                     recurse: true
