--- a/k8s/namespaces/fees-pay/ccpay-payment-api/perftest.yaml
+++ b/k8s/namespaces/fees-pay/ccpay-payment-api/perftest.yaml
@@ -13,7 +13,7 @@ spec:
         POSTGRES_HOST: payment-postgres-db-v11-{{ .Values.global.environment }}.postgres.database.azure.com
         POSTGRES_USERNAME: payment@payment-postgres-db-v11-{{ .Values.global.environment }}
         RD_LOCATION_BASE_URL: http://rd-location-ref-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
-        TRUSTED_S2S_SERVICE_NAMES: "prl_cos_api,adoption_web,refunds_api,cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,finrem_case_orchestration,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service,iac,probate_backend,nfdiv_case_api,civil_service"
+        TRUSTED_S2S_SERVICE_NAMES: "prl_cos_api,adoption_web,refunds_api,cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,finrem_case_orchestration,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service,iac,probate_backend,sptribs_case_api,nfdiv_case_api,civil_service"
         PBA_CONFIG1_SERVICE_NAMES: dummy
         IAC_SERVICE_API_URL: http://ia-case-access-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
         CASE_PAYMENT_ORDERS_API_URL: http://cpo-case-payment-orders-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
