--- a/k8s/namespaces/rd/rd-professional-api-integration/demo.yaml
+++ b/k8s/namespaces/rd/rd-professional-api-integration/demo.yaml
@@ -10,4 +10,4 @@ spec:
         USER_PROFILE_URL: http://rd-user-profile-api-int-demo.service.core-compute-demo.internal
         DELETE_ORG: true
         ACTIVE_ORG_EXT: true
-        PRD_S2S_AUTHORISED_SERVICES: rd_professional_api,rd_user_profile_api,xui_webapp,finrem_payment_service,finrem_case_orchestration,fpl_case_service,iac,aac_manage_case_assignment,divorce_frontend,unspec_service,nfdiv_case_api,am_org_role_mapping_service,probate_backend
+        PRD_S2S_AUTHORISED_SERVICES: rd_professional_api,rd_user_profile_api,xui_webapp,finrem_payment_service,finrem_case_orchestration,fpl_case_service,iac,aac_manage_case_assignment,divorce_frontend,unspec_service,sptribs_case_api,nfdiv_case_api,am_org_role_mapping_service,probate_backend
