--- a/k8s/namespaces/rd/rd-professional-api/perftest.yaml
+++ b/k8s/namespaces/rd/rd-professional-api/perftest.yaml
@@ -12,5 +12,5 @@ spec:
       cpuRequests: "1000m"
       environment:
         DELETE_ORG: true
-        PRD_S2S_AUTHORISED_SERVICES: rd_professional_api,rd_user_profile_api,xui_webapp,finrem_payment_service,finrem_case_orchestration,fpl_case_service,iac,aac_manage_case_assignment,divorce_frontend,nfdiv_case_api,am_org_role_mapping_service,civil_service,probate_backend,prl_cos_api,payment_app,civil_general_applications
+        PRD_S2S_AUTHORISED_SERVICES: rd_professional_api,rd_user_profile_api,xui_webapp,finrem_payment_service,finrem_case_orchestration,fpl_case_service,iac,aac_manage_case_assignment,divorce_frontend,sptribs_case_api,nfdiv_case_api,sptribs_case_api,am_org_role_mapping_service,civil_service,probate_backend,prl_cos_api,payment_app,civil_general_applications
         DUMMY_VAR: false
