Apply CPU/memory configuration to Smee & Ford production container

--- a/k8s/namespaces/probate/probate-cron-smee-and-ford-extract/demo.yaml
+++ b/k8s/namespaces/probate/probate-cron-smee-and-ford-extract/demo.yaml
@@ -81,7 +81,7 @@ spec:
               alias: lev.death.url
             - name: schedulerCaseWorkerUser
               alias: SCHEDULER_CASEWORKER_USERNAME
-            - name: schedulerCaseWorkerUser
+            - name: schedulerCaseWorkerPass
               alias: SCHEDULER_CASEWORKER_PASSWORD
             - name: blob-storage-connection-string
               alias: BLOB_STORAGE_CONNECTION_STRING
