--- a/apps/hmc/preview/base/kustomization.yaml
+++ b/apps/hmc/preview/base/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - ../../../base   # This is apps/base instead of apps/hmc/base as preview doesn't install everything
   - ../../identity/identity.yaml
+  - ../../hmc-operational-reports-runner/hmc-operational-reports-runner.yaml
 namespace: hmc
 patchesStrategicMerge:
   - ../../identity/aat.yaml
