--- a/clusters/demo/base/kustomization.yaml
+++ b/clusters/demo/base/kustomization.yaml
@@ -19,6 +19,7 @@ resources:
   - ../../../apps/nfdiv/base/kustomize.yaml
   - ../../../apps/et/base/kustomize.yaml
   - ../../../apps/hmc/base/kustomize.yaml
+  - ../../../apps/xui/base/kustomize.yaml
 patches:
   - path: ../../../apps/base/kustomize.yaml
     target:
