--- a/apps/probate/probate-cron-make-dormant-cases/aat/00.yaml
+++ b/apps/probate/probate-cron-make-dormant-cases/aat/00.yaml
@@ -6,7 +6,7 @@ spec:
   releaseName: probate-cron-make-dormant-cases
   values:
     job:
-      schedule: "1/20 * * * *"
+      schedule: "0-29/10 * * * *"
     global:
       jobKind: CronJob
       enableKeyVaults: true
