--- a/apps/probate/probate-cron-reactivate-dormant-cases/demo/00.yaml
+++ b/apps/probate/probate-cron-reactivate-dormant-cases/demo/00.yaml
@@ -7,7 +7,7 @@ spec:
   values:
     job:
       image: hmctspublic.azurecr.io/probate/back-office:pr-2018-b90888a-20220908085718 #{"$imagepolicy": "flux-system:demo-probate-back-office"}
-      schedule: "9/20 * * * *"
+      schedule: "0-29/10 * * * *"
       environment:
     global:
       jobKind: CronJob
