--- a/apps/probate/probate-cron-reactivate-dormant-cases/demo/01.yaml
+++ b/apps/probate/probate-cron-reactivate-dormant-cases/demo/01.yaml
@@ -1,13 +1,14 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: probate-cron-make-dormant-cases
+  name: probate-cron-reactivate-dormant-cases
 spec:
-  releaseName: probate-cron-make-dormant-cases
+  releaseName: probate-cron-reactivate-dormant-cases
   values:
     job:
       image: hmctspublic.azurecr.io/probate/back-office:pr-2018-b90888a-20220908085718 #{"$imagepolicy": "flux-system:demo-probate-back-office"}
-      schedule: "0-29/10 * * * *"
+      schedule: "30-59/10 * * * *"
+      environment:
     global:
       jobKind: CronJob
       enableKeyVaults: true
