--- a/apps/hmc/hmc-operational-reports-runner/perftest/01.yaml
+++ b/apps/hmc/hmc-operational-reports-runner/perftest/01.yaml
@@ -7,3 +7,8 @@ spec:
     job:
       schedule: "01 02 2-30/2 * *"
       environment:
+    global:
+      jobKind: CronJob
+      enableKeyVaults: true
+      tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
+      environment: perftest
