HMAN-387 updated operational reports to V2

--- a/apps/hmc/hmc-operational-reports-runner/hmc-operational-reports-runner.yaml
+++ b/apps/hmc/hmc-operational-reports-runner/hmc-operational-reports-runner.yaml
@@ -17,7 +17,7 @@ spec:
     ref: master
     path: stable/hmc-operational-reports-runner
     spec:
-      chart: nfdiv-cron
+      chart: hmc-cron
       version: 0.0.7
       sourceRef:
         kind: HelmRepository
