--- a/k8s/demo/common-overlay/divorce/kustomization.yaml
+++ b/k8s/demo/common-overlay/divorce/kustomization.yaml
@@ -5,6 +5,7 @@ bases:
 - ../../../namespaces/divorce
 - ../../../namespaces/divorce/namespace.yaml
 - ../../../namespaces/all-namespaces/nonprod-role.yaml
+- ../../../namespaces/divorce/div-cfs/div-cfs.yaml
 patchesStrategicMerge:
 - ../../../namespaces/divorce/div-cms/demo.yaml
 - ../../../namespaces/divorce/div-da/demo.yaml
