--- a/apps/hmc/hmc-operational-reports-runner/ithc/01.yaml
+++ b/apps/hmc/hmc-operational-reports-runner/ithc/01.yaml
@@ -11,4 +11,4 @@ spec:
       jobKind: CronJob
       enableKeyVaults: true
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
-      environment: perftest
+      environment: ithc
