configuration for sptribs_case_api project

--- a/apps/sptribs/preview/base/kustomization.yaml
+++ b/apps/sptribs/preview/base/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - ../../../am/identity/identity.yaml
   - ../../../aac/identity/identity.yaml
   - ../../../ccd/identity/identity.yaml
-namespace: nfdiv
+namespace: sptribs
 patchesStrategicMerge:
   - ../../identity/aat.yaml
   - ../../../xui/identity/aat.yaml
