--- a/k8s/namespaces/rd/rd-professional-api/aat.yaml
+++ b/k8s/namespaces/rd/rd-professional-api/aat.yaml
@@ -8,5 +8,5 @@ spec:
       environment:
         DELETE_ORG: false
         ACTIVE_ORG_EXT: true
-        PRD_S2S_AUTHORISED_SERVICES: rd_professional_api,rd_user_profile_api,xui_webapp,finrem_payment_service,finrem_case_orchestration,fpl_case_service,iac,aac_manage_case_assignment,divorce_frontend,sptribs_case_api,nfdiv_case_api,am_org_role_mapping_service,probate_backend,civil_service,payment_app,prl_cos_api,civil_general_applications
+        PRD_S2S_AUTHORISED_SERVICES: rd_professional_api,rd_user_profile_api,xui_webapp,finrem_payment_service,finrem_case_orchestration,fpl_case_service,iac,aac_manage_case_assignment,divorce_frontend,nfdiv_case_api,am_org_role_mapping_service,probate_backend,civil_service,payment_app,prl_cos_api,civil_general_applications
         USER_PROFILE_URL: http://rd-user-profile-api-java # revert after test
