HMAN-387 remove rollback reference

--- a/apps/hmc/hmc-operational-reports-runner/hmc-operational-reports-runner.yaml
+++ b/apps/hmc/hmc-operational-reports-runner/hmc-operational-reports-runner.yaml
@@ -11,7 +11,7 @@ spec:
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/hmc/operational-reports-runner:prod-f6225b6-20220913145404 #{"$imagepolicy": "flux-system:hmc-operational-reports-runner"}
     keyVaults:
-      nfdiv:
+      hmc:
         secrets:
           - name: AppInsightsInstrumentationKey
             alias: azure.application-insights.instrumentation-key
