--- a/k8s/namespaces/sscs/sscs-tya-notif/demo.yaml
+++ b/k8s/namespaces/sscs/sscs-tya-notif/demo.yaml
@@ -9,7 +9,7 @@ spec:
     java:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/sscs/tya-notif:pr-2149-8ee990a-20220913163122 #{"$imagepolicy": "flux-system:demo-sscs-tya-notif"}
+      image: hmctspublic.azurecr.io/sscs/tya-notif:pr-2149-8ee990a-20220913163122 #{"$imagepolicy": "flux-system:sscs-tya-notif"}
       environment:
         JOB_SCHEDULER_DB_USERNAME: "notification@sscs-tya-notif-postgres-v11-db-demo"
         JOB_SCHEDULER_DB_NAME: "notification"
