HMAN-387 update to job

--- a/apps/hmc/hmc-operational-reports-runner/hmc-operational-reports-runner.yaml
+++ b/apps/hmc/hmc-operational-reports-runner/hmc-operational-reports-runner.yaml
@@ -32,8 +32,8 @@ spec:
     schedule: 0 01 02 ? * * *
   chart:
     spec:
-      chart: hmc-cron
-      version: 0.0.7
+      chart: job
+      version: 0.7.3
       sourceRef:
         kind: HelmRepository
         name: hmctspublic
