HMAN-387 remove job reference

--- a/apps/hmc/hmc-operational-reports-runner/hmc-operational-reports-runner.yaml
+++ b/apps/hmc/hmc-operational-reports-runner/hmc-operational-reports-runner.yaml
@@ -30,3 +30,11 @@ spec:
           - name: notify-awaiting-actuals-reply-to-email-address
             alias: NOTIFY_AWAITING_ACTUALS_REPLY_TO_EMAIL_ADDRESS
     schedule: 0 01 02 ? * * *
+  chart:
+    spec:
+      chart: ./stable/hmc-operational-reports-runner
+      sourceRef:
+        kind: GitRepository
+        name: hmcts-charts
+        namespace: flux-system
+      interval: 1m
