--- a/apps/response/api/response-api.yaml
+++ b/apps/response/api/response-api.yaml
@@ -8,7 +8,7 @@ spec:
   values:
     nodejs:
       replicas: 2
-      image: hmctspublic.azurecr.io/rpe/response-api:dbe9by
+      image: hmctspublic.azurecr.io/rpe/response-api:dbu5a9
   chart:
     spec:
       chart: rpe-response-api
