--- a/apps/xui/demo/base/kustomization.yaml
+++ b/apps/xui/demo/base/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - ../../base
   - ../../xui-activity-tracker-api/xui-activity-tracker-api.yaml
+namespace: xui
 patchesStrategicMerge:
   - ../../identity/demo.yaml
   - ../../xui-activity-tracker-api/demo.yaml
