--- a/apps/hmc/hmc-operational-reports-runner/demo/00.yaml
+++ b/apps/hmc/hmc-operational-reports-runner/demo/00.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   values:
     job:
-      schedule: "01 */2 * * *"
+      schedule: "*/30 * * * *"
       environment:
     global:
       jobKind: CronJob
