--- a/clusters/demo/base/kustomization.yaml
+++ b/clusters/demo/base/kustomization.yaml
@@ -20,6 +20,7 @@ resources:
   - ../../../apps/et/base/kustomize.yaml
   - ../../../apps/hmc/base/kustomize.yaml
   - ../../../apps/xui/base/kustomize.yaml
+  - ../../../apps/probate/base/kustomize.yaml
 patches:
   - path: ../../../apps/base/kustomize.yaml
     target:
