--- a/apps/probate/demo/base/kustomization.yaml
+++ b/apps/probate/demo/base/kustomization.yaml
@@ -4,5 +4,6 @@ resources:
   - ../../base
   - ../../probate-cron-make-dormant-cases/probate-cron-make-dormant-cases.yaml
   - ../../probate-cron-reactivate-dormant-cases/probate-cron-reactivate-dormant-cases.yaml
+namespace: probate
 patchesStrategicMerge:
   - ../../identity/demo.yaml
