--- a/apps/probate/probate-cron-make-dormant-cases/demo/00.yaml
+++ b/apps/probate/probate-cron-make-dormant-cases/demo/00.yaml
@@ -7,7 +7,7 @@ spec:
   values:
     job:
       image: hmctspublic.azurecr.io/probate/back-office:pr-2018-2cd4379-20220914094815 #{"$imagepolicy": "flux-system:demo-probate-back-office"}
-      schedule: "0-29/10 * * * *"
+      schedule: "0,20,40 * * *"
     global:
       jobKind: CronJob
       enableKeyVaults: true
