--- a/k8s/namespaces/em/kustomization.yaml
+++ b/k8s/namespaces/em/kustomization.yaml
@@ -7,3 +7,4 @@ bases:
 - em-stitching/em-stitching.yaml
 - em-ccd-orchestrator/em-ccd-orchestrator.yaml
 - em-hrs-api/em-hrs-api.yaml
+- em-ped-api/em-ped-api.yaml
