--- a/k8s/namespaces/ia/ia-case-notifications-api/demo.yaml
+++ b/k8s/namespaces/ia/ia-case-notifications-api/demo.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   values:
     java:
-      image: hmctspublic.azurecr.io/ia/case-notifications-api:pr-682
+      image: hmctspublic.azurecr.io/ia/case-notifications-api:prod-0b030fe-20220831085958 #{"$imagepolicy": "flux-system:ia-case-notifications-api"}
       keyVaults:
         ia:
           resourceGroup: ia
