--- a/apps/probate/probate-cron-make-dormant-cases/demo/01.yaml
+++ b/apps/probate/probate-cron-make-dormant-cases/demo/01.yaml
@@ -7,7 +7,9 @@ spec:
   values:
     job:
       image: hmctspublic.azurecr.io/probate/back-office:pr-2018-2cd4379-20220914094815 #{"$imagepolicy": "flux-system:demo-probate-back-office"}
-      schedule: "10,30,50 * * *"
+      schedule: "0,20,40 * * * *"
+      environment:
+        TRIG: trig-1
     global:
       jobKind: CronJob
       enableKeyVaults: true
