Update chart config

--- a/apps/divorce/div-cfs/div-cfs.yaml
+++ b/apps/divorce/div-cfs/div-cfs.yaml
@@ -22,7 +22,7 @@ spec:
         VAR_FV2: trig4
   chart:
     spec:
-      chart: ./stable/div-cms
+      chart: ./stable/div-cfs
       sourceRef:
         kind: GitRepository
         name: hmcts-charts
