Added in config for em-ped-api in v2

--- a/clusters/aat/base/kustomization.yaml
+++ b/clusters/aat/base/kustomization.yaml
@@ -20,6 +20,7 @@ resources:
   - ../../../apps/nfdiv/base/kustomize.yaml
   - ../../../apps/hmc/base/kustomize.yaml
   - ../../../apps/probate/base/kustomize.yaml
+  - ../../../apps/em/base/kustomize.yaml
 patches:
   - path: ../../../apps/base/kustomize.yaml
     target:
