--- a/clusters/ithc/base/kustomization.yaml
+++ b/clusters/ithc/base/kustomization.yaml
@@ -15,6 +15,7 @@ resources:
   - ../../../apps/wa/base/kustomize.yaml
   - ../../../apps/nfdiv/base/kustomize.yaml
   - ../../../apps/hmc/base/kustomize.yaml
+  - ../../../apps/em/base/kustomize.yaml
 patches:
   - path: ../../../apps/base/kustomize.yaml
     target:
