--- a/clusters/prod/base/kustomization.yaml
+++ b/clusters/prod/base/kustomization.yaml
@@ -16,6 +16,7 @@ resources:
   - ../../../apps/divorce/base/kustomize.yaml
   - ../../../apps/cnp/base/kustomize.yaml
   - ../../../apps/nfdiv/base/kustomize.yaml
+  - ../../../apps/em/base/kustomize.yaml
 patches:
   - path: ../../../apps/base/kustomize.yaml
     target:
