--- a/k8s/namespaces/rd/rd-user-profile-api/aat.yaml
+++ b/k8s/namespaces/rd/rd-user-profile-api/aat.yaml
@@ -12,3 +12,6 @@ spec:
         APPLICATION_LOGGING_LEVEL: DEBUG
         FEIGN_CLIENT_CONFIG_DEFAULT_CONNECTTIMEOUT: 30000
         FEIGN_CLIENT_CONFIG_DEFAULT_READTIMEOUT: 30000
+        FEIGN_HTTPCLIENT_ENABLED: false
+        FEIGN_OKHTTP_ENABLED: true
+        IDAM_APACHEHTTPCLIENT_ENABLED: false
