--- a/k8s/namespaces/reform-scan/reform-scan-notification-service/demo.yaml
+++ b/k8s/namespaces/reform-scan/reform-scan-notification-service/demo.yaml
@@ -7,4 +7,4 @@ spec:
     java:
       environment:
         PENDING_NOTIFICATIONS_SEND_DELAY_IN_MINUTE: 0
-        REFRESH_PODS: "yes"
+        REFRESH_PODS: "true"
