--- a/apps/probate/probate-cron-reactivate-dormant-cases/demo/00.yaml
+++ b/apps/probate/probate-cron-reactivate-dormant-cases/demo/00.yaml
@@ -7,7 +7,7 @@ spec:
   values:
     job:
       image: hmctspublic.azurecr.io/probate/back-office:pr-2018-9c0a996-20220915122609 #{"$imagepolicy": "flux-system:demo-probate-back-office"}
-      schedule: "10,30,50 * * * *"
+      schedule: "0 0 * * *"
       environment:
     global:
       jobKind: CronJob
