--- a/apps/probate/probate-cron-reactivate-dormant-cases/aat/00.yaml
+++ b/apps/probate/probate-cron-reactivate-dormant-cases/aat/00.yaml
@@ -6,7 +6,7 @@ spec:
   releaseName: probate-cron-reactivate-dormant-cases
   values:
     job:
-      schedule: "0-29/10 * * * *"
+      schedule: "0 0 * * *"
     global:
       jobKind: CronJob
       enableKeyVaults: true
