--- a/apps/probate/probate-cron-reactivate-dormant-cases/demo/00.yaml
+++ b/apps/probate/probate-cron-reactivate-dormant-cases/demo/00.yaml
@@ -9,6 +9,7 @@ spec:
       image: hmctspublic.azurecr.io/probate/back-office:pr-2018-9c0a996-20220915122609 #{"$imagepolicy": "flux-system:demo-probate-back-office"}
       schedule: "10,30,50 * * * *"
       environment:
+        VAR: trigger1
     global:
       jobKind: CronJob
       enableKeyVaults: true
