--- a/k8s/namespaces/fees-pay/pba-payment-job-int/demo.yaml
+++ b/k8s/namespaces/fees-pay/pba-payment-job-int/demo.yaml
@@ -8,7 +8,8 @@ spec:
   values:
     job:
       image: "hmctspublic.azurecr.io/payment/jobs:pr-43-ac6a2ba-20220826134120" #{"$imagepolicy": "flux-system:demo-int-pba-csv-report"}
-      schedule: "30 2 * * *"
+#      schedule: "30 2 * * *"
+      schedule: "*/10 * * * *"
       environment:
         DUMMY_RESTART_VAR: false
         PAYMENT_SERVER_URL: http://payment-api-int-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
