--- a/clusters/aat/base/kustomization.yaml
+++ b/clusters/aat/base/kustomization.yaml
@@ -21,6 +21,7 @@ resources:
   - ../../../apps/hmc/base/kustomize.yaml
   - ../../../apps/probate/base/kustomize.yaml
   - ../../../apps/em/base/kustomize.yaml
+  - ../../../apps/et/base/kustomize.yaml
 patches:
   - path: ../../../apps/base/kustomize.yaml
     target:
