--- a/apps/et/perftest/base/kustomization.yaml
+++ b/apps/et/perftest/base/kustomization.yaml
@@ -2,8 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base
-  - ../../et-sya/et-sya.yaml
-  - ../../et-sya-api/et-sya-api.yaml
+  - ../../et-sya/perftest.yaml
+  - ../../et-sya-api/perftest.yaml
 namespace: et
 patchesStrategicMerge:
   - ../../identity/perftest.yaml
