--- a/apps/et/demo/base/kustomization.yaml
+++ b/apps/et/demo/base/kustomization.yaml
@@ -2,9 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base
-  - ../../et-sya/et-sya.yaml
-  - ../../et-sya-api/et-sya-api.yaml
 namespace: et
 patchesStrategicMerge:
   - ../../identity/demo.yaml
   - ../../et-cos/demo.yaml
+  - ../../et-sya/demo.yaml
+  - ../../et-sya-api/demo.yaml
