Test patch comment out

--- a/apps/et/perftest/base/kustomization.yaml
+++ b/apps/et/perftest/base/kustomization.yaml
@@ -7,5 +7,5 @@ resources:
 namespace: et
 patchesStrategicMerge:
   - ../../identity/perftest.yaml
-  - ../../et-sya/perftest.yaml
-  - ../../et-sya-api/perftest.yaml
+  #- ../../et-sya/perftest.yaml
+  #- ../../et-sya-api/perftest.yaml
