patch comment out

--- a/apps/et/aat/base/kustomization.yaml
+++ b/apps/et/aat/base/kustomization.yaml
@@ -7,5 +7,5 @@ resources:
 namespace: et
 patchesStrategicMerge:
   - ../../identity/aat.yaml
-  - ../../et-sya/aat.yaml
-  - ../../et-sya-api/aat.yaml
+  #- ../../et-sya/aat.yaml
+  #- ../../et-sya-api/aat.yaml
