Use R1.1 Image on Perftest

--- a/apps/et/perftest/base/kustomization.yaml
+++ b/apps/et/perftest/base/kustomization.yaml
@@ -7,5 +7,6 @@ resources:
 namespace: et
 patchesStrategicMerge:
   - ../../identity/perftest.yaml
+  - ../../et-cos/perftest.yaml
   #- ../../et-sya/perftest.yaml
   #- ../../et-sya-api/perftest.yaml
