--- a/apps/et/perftest/base/kustomization.yaml
+++ b/apps/et/perftest/base/kustomization.yaml
@@ -8,5 +8,6 @@ namespace: et
 patchesStrategicMerge:
   - ../../identity/perftest.yaml
   - ../../et-cos/perftest.yaml
+  - ../../et-msg-handler/perftest.yaml
   #- ../../et-sya/perftest.yaml
   #- ../../et-sya-api/perftest.yaml
