--- a/apps/et/automation/kustomization.yaml
+++ b/apps/et/automation/kustomization.yaml
@@ -4,8 +4,10 @@ resources:
   - ../et-cos/image-repo.yaml
   - ../et-cos/image-policy.yaml
   - ../et-cos/demo-image-policy.yaml
+  - ../et-cos/perftest-image-policy.yaml
   - ../et-msg-handler/image-repo.yaml
   - ../et-msg-handler/image-policy.yaml
+  - ../et-msg-handler/perftest-image-policy.yaml
   - ../et-sya-api/image-repo.yaml
   - ../et-sya-api/image-policy.yaml
   - ../et-sya/image-repo.yaml
