--- a/k8s/namespaces/sscs/sscs-hearings-api/demo.yaml
+++ b/k8s/namespaces/sscs/sscs-hearings-api/demo.yaml
@@ -5,10 +5,10 @@ metadata:
 spec:
   values:
     java:
-      image: hmctspublic.azurecr.io/sscs/hearings-api:pr-351-4b781e5-20220916140459 #{"$imagepolicy": "flux-system:demo-sscs-hearings-api"}
+      image: hmctspublic.azurecr.io/sscs/hearings-api:pr-351-4b781e5-20220916140459 #{"$imagepolicy": "flux-system:sscs-hearings-api"}
       environment:
         TRIBUNALS_HEARINGS_LISTENING_ENABLED: true
         SSCS_LOG_LEVEL: DEBUG
         TRIBUNALS_EVENT_QUEUE_RETRY_TIMEOUT: 60
-        DUMMY_PROPERTY: true
+        DUMMY_PROPERTY: false
         HMC_HEARINGS_LISTENING_ENABLED: true
