changing schedule back to original (#17866)

--- a/k8s/namespaces/fees-pay/pba-payment-job-int/demo.yaml
+++ b/k8s/namespaces/fees-pay/pba-payment-job-int/demo.yaml
@@ -8,8 +8,7 @@ spec:
   values:
     job:
       image: "hmctspublic.azurecr.io/payment/jobs:pr-44-ec2c7e5-20220826134117" #{"$imagepolicy": "flux-system:demo-int-pba-csv-report"}
-      #      schedule: "30 2 * * *"
-      schedule: "*/10 * * * *"
+      schedule: "30 2 * * *"
       environment:
         DUMMY_RESTART_VAR: false
         PAYMENT_SERVER_URL: http://payment-api-int-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
