--- a/k8s/namespaces/rd/rd-profile-sync/aat.yaml
+++ b/k8s/namespaces/rd/rd-profile-sync/aat.yaml
@@ -6,7 +6,7 @@ spec:
   values:
     java:
       environment:
-        CRON_SCHEDULE: */20 * * * *
+        CRON_SCHEDULE: "*/20 * * * *"
         DELETE_ORG: true
         FEIGN_CLIENT_CONFIG_DEFAULT_CONNECTTIMEOUT: 30000
         FEIGN_CLIENT_CONFIG_DEFAULT_READTIMEOUT: 30000
