Enable traefik autoscaling

--- a/apps/admin/traefik2/traefik2.yaml
+++ b/apps/admin/traefik2/traefik2.yaml
@@ -51,8 +51,9 @@ spec:
     rbac:
       enabled: true
     autoscaling:
-      minReplicas: 1
-      maxReplicas: 3
+      enabled: true
+      minReplicas: 2
+      maxReplicas: 4
     tolerations:
       - key: CriticalAddonsOnly
         operator: Equal
