--- a/apps/divorce/aat/base/kustomization.yaml
+++ b/apps/divorce/aat/base/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base
+  - ../../div-cfs/div-cfs.yaml
 patchesStrategicMerge:
   - ../../div-dn/aat.yaml
   - ../../div-cos/aat.yaml
