--- a/apps/divorce/ithc/base/kustomization.yaml
+++ b/apps/divorce/ithc/base/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base
+  - ../../div-cfs/div-cfs.yaml
 namespace: divorce
 patchesStrategicMerge:
   - ../../div-rfe/ithc.yaml
