--- a/clusters/aat/base/kustomization.yaml
+++ b/clusters/aat/base/kustomization.yaml
@@ -19,6 +19,7 @@ resources:
   - ../../../apps/wa/base/kustomize.yaml
   - ../../../apps/nfdiv/base/kustomize.yaml
   - ../../../apps/hmc/base/kustomize.yaml
+  - ../../../apps/ccd/base/kustomize.yaml
   - ../../../apps/probate/base/kustomize.yaml
   - ../../../apps/em/base/kustomize.yaml
   - ../../../apps/et/base/kustomize.yaml
