Keep old prod image on perftest

--- a/k8s/namespaces/xui/xui-webapp/perftest.yaml
+++ b/k8s/namespaces/xui/xui-webapp/perftest.yaml
@@ -43,3 +43,4 @@ spec:
         SERVICES_PRD_LOCATION_API: http://rd-location-ref-api-perftest.service.core-compute-perftest.internal
         SERVICES_PRD_JUDICIAL_API: http://rd-judicial-api-perftest.service.core-compute-perftest.internal
         SERVICES_PRD_COMMONDATA_API: http://rd-commondata-api-perftest.service.core-compute-perftest.internal
+      image: hmctspublic.azurecr.io/xui/webapp:prod-74cbec6-20220831115707 #{"$imagepolicy": "flux-system:perftest-xui-webapp"}
