Add memory limits to div-pfe perftest.yaml

--- a/apps/divorce/div-pfe/perftest.yaml
+++ b/apps/divorce/div-pfe/perftest.yaml
@@ -6,6 +6,10 @@ metadata:
 spec:
   values:
     nodejs:
+      memoryRequests: "512Mi"
+      cpuRequests: "500m"
+      memoryLimits: "2048Mi"
+      cpuLimits: "1000m"
       ingressHost: petitioner-frontend-aks.perftest.platform.hmcts.net
       environment:
         PUBLIC_HOSTNAME: https://petitioner-frontend-aks.perftest.platform.hmcts.net
