Update memory limits to div-pfe perftest.yaml

--- a/apps/divorce/div-pfe/perftest.yaml
+++ b/apps/divorce/div-pfe/perftest.yaml
@@ -16,3 +16,4 @@ spec:
         DECREE_NISI_FRONTEND_URL: https://decree-nisi-aks.perftest.platform.hmcts.net
         EQUALITY_URL: https://pcq.perftest.platform.hmcts.net
         PRD_ORGANISATION_API_URL: http://rd-professional-api-perftest.service.core-compute-perftest.internal/refdata/external/v1/organisations/status
+        VAR_TRIGGER: trigger01
