--- a/k8s/namespaces/sscs/sscs-tribunals-api/demo.yaml
+++ b/k8s/namespaces/sscs/sscs-tribunals-api/demo.yaml
@@ -7,7 +7,7 @@ spec:
   values:
     java:
       aadIdentityName: sscs
-      image: hmctspublic.azurecr.io/sscs/tribunals-api:prod-e78d470-20220920094654 #{"$imagepolicy": "flux-system:sscs-tribunals-api"}
+      image: hmctspublic.azurecr.io/sscs/tribunals-api:prod-e78d470-20220920094654 #{"$imagepolicy": "demo-flux-system:sscs-tribunals-api"}
       environment:
         CREATE_CCD_ENDPOINT: true
         UPLOAD_AUDIO_VIDEO_EVIDENCE_FEATURE: true
