added referral template ids

--- a/apps/et/aat/base/kustomization.yaml
+++ b/apps/et/aat/base/kustomization.yaml
@@ -7,5 +7,6 @@ resources:
 namespace: et
 patchesStrategicMerge:
   - ../../identity/aat.yaml
+  - ../../et-cos/aat.yaml
   #- ../../et-sya/aat.yaml
   #- ../../et-sya-api/aat.yaml
