--- a/apps/et/et-cos/perftest.yaml
+++ b/apps/et/et-cos/perftest.yaml
@@ -7,3 +7,5 @@ spec:
   values:
     java:
       image: hmctspublic.azurecr.io/et/cos:pr-483-475ec92-20220920223321 #{"$imagepolicy": "flux-system:perftest-et-cos"}
+      environment:
+        REFERRAL_TEMPLATE_ID: 92d9c506-c3ca-4063-996b-270861c38261
