--- a/apps/divorce/base/kustomization.yaml
+++ b/apps/divorce/base/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - ../../base
   - ../identity/identity.yaml
+  - ../div-cfs/div-cfs.yaml
   - ../div-cos/div-cos.yaml
   - ../div-pfe/div-pfe.yaml
   - ../div-rfe/div-rfe.yaml
