remove apps from f v2

--- a/clusters/prod/base/kustomization.yaml
+++ b/clusters/prod/base/kustomization.yaml
@@ -7,15 +7,15 @@ resources:
   - ../../../apps/kured/base/kustomize.yaml
   - ../../../apps/monitoring/base/kustomize.yaml
   - ../../../apps/neuvector/base/kustomize.yaml
-  - ../../../apps/adoption/base/kustomize.yaml
-  - ../../../apps/financial-remedy/base/kustomize.yaml
+#  - ../../../apps/adoption/base/kustomize.yaml
+#  - ../../../apps/financial-remedy/base/kustomize.yaml
   - ../../../apps/dynatrace/base/kustomize.yaml
-  - ../../../apps/idam/base/kustomize.yaml
-  - ../../../apps/et/base/kustomize.yaml
-  - ../../../apps/wa/base/kustomize.yaml
-  - ../../../apps/divorce/base/kustomize.yaml
+#  - ../../../apps/idam/base/kustomize.yaml
+#  - ../../../apps/et/base/kustomize.yaml
+#  - ../../../apps/wa/base/kustomize.yaml
+#  - ../../../apps/divorce/base/kustomize.yaml
   - ../../../apps/cnp/base/kustomize.yaml
-  - ../../../apps/nfdiv/base/kustomize.yaml
+#  - ../../../apps/nfdiv/base/kustomize.yaml
 patches:
   - path: ../../../apps/base/kustomize.yaml
     target:
