div-cms demo fv2

--- a/k8s/prod/common-overlay/divorce/kustomization.yaml
+++ b/k8s/prod/common-overlay/divorce/kustomization.yaml
@@ -4,6 +4,7 @@ namespace: divorce
 bases:
 - ../../../namespaces/divorce
 - ../../../namespaces/divorce/namespace.yaml
+- ../../../namespaces/divorce/div-cms/div-cms.yaml
 patchesStrategicMerge:
 - ../../../namespaces/divorce/div-da/prod.yaml
 - ../../../namespaces/divorce/div-cms/prod.yaml
