--- a/apps/divorce/demo/base/kustomization.yaml
+++ b/apps/divorce/demo/base/kustomization.yaml
@@ -2,8 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base
+  - ../../div-cms/div-cms.yaml
 namespace: divorce
 patchesStrategicMerge:
+  - ../../div-cms/demo.yaml
   - ../../div-dn/demo.yaml
   - ../../div-cos/demo.yaml
   - ../../div-pfe/demo.yaml
