Added in aat & preview config for em-ped-api

--- a/apps/em/preview/base/kustomization.yaml
+++ b/apps/em/preview/base/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - ../../../base   # This is apps/base instead of apps/em/base as preview doesn't install everything
   - ../../identity/identity.yaml
+  - ../../em-ped-api/em-ped-api.yaml
 namespace: em
 patchesStrategicMerge:
   - ../../identity/aat.yaml
