--- a/apps/divorce/aat/base/kustomization.yaml
+++ b/apps/divorce/aat/base/kustomization.yaml
@@ -2,7 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base
+  - ../../div-cms/div-cms.yaml
 patchesStrategicMerge:
+  - ../../div-cms/aat.yaml
   - ../../div-dn/aat.yaml
   - ../../div-cos/aat.yaml
   - ../../div-pfe/aat.yaml
