--- a/apps/divorce/perftest/base/kustomization.yaml
+++ b/apps/divorce/perftest/base/kustomization.yaml
@@ -2,8 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base
+  - ../../div-cms/div-cms.yaml
 namespace: divorce
 patchesStrategicMerge:
+  - ../../div-cms/perftest.yaml
   - ../../div-dn/perftest.yaml
   - ../../div-pfe/perftest.yaml
   - ../../div-rfe/perftest.yaml
