DFPL-632: Refreshing pods

--- a/k8s/namespaces/family-public-law/fpl-case-service/demo.yaml
+++ b/k8s/namespaces/family-public-law/fpl-case-service/demo.yaml
@@ -7,7 +7,7 @@ spec:
     java:
       ingressHost: fpl-case-service-demo.service.core-compute-demo.internal
       environment:
-        RELEASE: AGAIN
+        RELEASE: NOW
         GATEWAY_URL: https://gateway-ccd.demo.platform.hmcts.net
         AUTH_IDAM_CLIENT_BASEURL: https://idam-api.demo.platform.hmcts.net
         CASE_DOCUMENT_AM_URL: http://ccd-case-document-am-api-demo.service.core-compute-demo.internal
