Fix ingressHost for idam-user-dashboard in sandbox

--- a/apps/idam/idam-user-dashboard/sbox.yaml
+++ b/apps/idam/idam-user-dashboard/sbox.yaml
@@ -8,7 +8,7 @@ spec:
   values:
     nodejs:
       replicas: 1
-      ingressHost: idam-user-dashboard.service.core-compute-sandbox.internal
+      ingressHost: idam-user-dashboard.sandbox.platform.hmcts.net
       environment:
         STRATEGIC_SERVICE_URL: 'http://idam-api.sandbox.platform.hmcts.net'
         STRATEGIC_PUBLIC_URL: 'http://idam-web-public.sandbox.platform.hmcts.net'
