HMAN-424:  Hearing service deploy in DEMO env and flux files for other environments       [HMAN-424] (https://tools.hmcts.net/jira/browse/HMAN-424).

--- a/apps/ccd/ccd-next-hearing-date-updater/aat/00.yaml
+++ b/apps/ccd/ccd-next-hearing-date-updater/aat/00.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   values:
     job:
-      schedule: "01 02 * * *"
+      schedule: "01 02 1-31/2 * *"
       environment:
     global:
       jobKind: CronJob
