--- a/apps/ccd/ccd-next-hearing-date-updater/perftest/00.yaml
+++ b/apps/ccd/ccd-next-hearing-date-updater/perftest/00.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   values:
     job:
-      schedule: "01 02 * * *"
+      schedule: "01 02 1-31/2 * *"
       environment:
     global:
       jobKind: CronJob
