--- a/k8s/namespaces/rpe/rpe-send-letter-service/demo.yaml
+++ b/k8s/namespaces/rpe/rpe-send-letter-service/demo.yaml
@@ -7,5 +7,6 @@ spec:
     java:
       image: hmctspublic.azurecr.io/rpe/send-letter-service:pr-1760-2d07e13-20220908123624
       environment:
-        ENCRYPTION_ENABLED: "false"
-        REFRESH_PODS: "true"
+        ENCRYPTION_ENABLED: false
+        CIVIL_SERVICE_ENABLED: true
+        REFRESH_PODS: true
