--- a/k8s/namespaces/rpe/rpe-send-letter-service/prod.yaml
+++ b/k8s/namespaces/rpe/rpe-send-letter-service/prod.yaml
@@ -15,5 +15,6 @@ spec:
         OLD_LETTER_CONTENT_CLEANUP_ENABLED: false
         DELAYED_STALE_REPORT_ENABLED: true
         FTP_UPLOADED_LETTERS_SUMMARY_REPORT_ENABLED: true
-        REFRESH_ME: "yes"
+        CIVIL_SERVICE_ENABLED: false
+        REFRESH_ME: true
 
