--- a/apps/divorce/div-cms/prod.yaml
+++ b/apps/divorce/div-cms/prod.yaml
@@ -1,7 +1,8 @@
-apiVersion: helm.fluxcd.io/v1
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: div-cms
+  namespace: divorce
 spec:
   values:
     java:
@@ -18,6 +19,5 @@ spec:
         IDAM_API_BASEURL: "https://idam-api.platform.hmcts.net"
         MANAGEMENT_ENDPOINT_HEALTH_CACHE_TIMETOLIVE: "4000"
         DOCUMENTATION_SWAGGER_ENABLED: "false"
-      aadIdentityName: divorce
       prometheus:
         enabled: true
