Disable traefik TLS for idam-user-dashboard ingress in SBox

--- a/apps/idam/idam-user-dashboard/sbox.yaml
+++ b/apps/idam/idam-user-dashboard/sbox.yaml
@@ -9,6 +9,7 @@ spec:
     nodejs:
       replicas: 1
       ingressHost: idam-user-dashboard.sandbox.platform.hmcts.net
+      disableTraefikTls: true
       environment:
         STRATEGIC_SERVICE_URL: 'http://idam-api.sandbox.platform.hmcts.net'
         STRATEGIC_PUBLIC_URL: 'http://idam-web-public.sandbox.platform.hmcts.net'
