--- a/k8s/namespaces/ccd/ccd-data-store-api/prod.yaml
+++ b/k8s/namespaces/ccd/ccd-data-store-api/prod.yaml
@@ -9,10 +9,10 @@ spec:
       replicas: 15
       autoscaling:
         enabled: false
-      memoryRequests: '4012Mi'
-      memoryLimits: '5120Mi'
-      cpuRequests: '2000m'
-      cpuLimits: '5000m'
+      memoryRequests: '4Gi'
+      memoryLimits: '5Gi'
+      cpuRequests: '1'
+      cpuLimits: '3'
       environment:
         CCD_CONDITIONAL_APIS_CASE_ASSIGNED_USER_AND_ROLES_ENABLED: true
         CCD_DEFAULTPRINTURL: "https://return-case-doc.ccd.platform.hmcts.net/jurisdictions/:jid/case-types/:ctid/cases/:cid"
