--- a/apps/idam/idam-user-dashboard/sbox.yaml
+++ b/apps/idam/idam-user-dashboard/sbox.yaml
@@ -11,7 +11,7 @@ spec:
       ingressHost: idam-user-dashboard.sandbox.platform.hmcts.net
       disableTraefikTls: true
       environment:
-        STRATEGIC_SERVICE_URL: 'http://idam-api.sandbox.platform.hmcts.net'
-        STRATEGIC_PUBLIC_URL: 'http://idam-web-public.sandbox.platform.hmcts.net'
-        DASHBOARD_URL: 'http://idam-user-dashboard.sandbox.platform.hmcts.net'
-        OAUTH_CLIENT_REDIRECT: 'http://idam-user-dashboard.sandbox.platform.hmcts.net/oauth2/callback'
+        STRATEGIC_SERVICE_URL: 'https://idam-api.sandbox.platform.hmcts.net'
+        STRATEGIC_PUBLIC_URL: 'https://idam-web-public.sandbox.platform.hmcts.net'
+        DASHBOARD_URL: 'https://idam-user-dashboard.sandbox.platform.hmcts.net'
+        OAUTH_CLIENT_REDIRECT: 'https://idam-user-dashboard.sandbox.platform.hmcts.net/oauth2/callback'
