--- a/k8s/namespaces/civil/civil-service/civil-service.yaml
+++ b/k8s/namespaces/civil/civil-service/civil-service.yaml
@@ -12,4 +12,5 @@ spec:
     java:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/civil/service:pr-1467-02e6d15-20220922122814 #{"$imagepolicy": "flux-system:demo-civil-service"}
+      image: hmctspublic.azurecr.io/civil/service:prod-1701104-20220920181618 #{"$imagepolicy": "flux-system:civil-service"}
+      
