--- a/k8s/namespaces/ccd/ccd-data-store-api/perftest.yaml
+++ b/k8s/namespaces/ccd/ccd-data-store-api/perftest.yaml
@@ -10,10 +10,10 @@ spec:
       image: hmctspublic.azurecr.io/ccd/data-store-api:prod-cd22064-20220920185959 #{"$imagepolicy": "flux-system:perftest-ccd-data-store-api"}
       autoscaling:
         enabled: false
-      memoryLimits: "5120Mi"
-      memoryRequests: "2560Mi"
-      cpuLimits: "5000m"
-      cpuRequests: "2500m"
+      memoryRequests: '4Gi'
+      memoryLimits: '5Gi'
+      cpuRequests: '1'
+      cpuLimits: '3'
       environment:
         CASE_DOCUMENT_AM_URL: http://ccd-case-document-am-api-perftest.service.core-compute-perftest.internal
         CCD_DEFAULTPRINTURL: "http://ccd-case-print-service-perftest.service.core-compute-perftest.internal/jurisdictions/:jid/case-types/:ctid/cases/:cid"
