--- a/apps/em/em-ped-api/image-repo.yaml
+++ b/apps/em/em-ped-api/image-repo.yaml
@@ -3,5 +3,4 @@ kind: ImageRepository
 metadata:
   name: em-ped-api
 spec:
-  image: hmctspublic.azurecr.io/em/ped-api:prod-9883ba8-20220921132122 #{"$imagepolicy": "flux-system:em-ped-api"}
-  #Example below
+  image: hmctspublic.azurecr.io/em/ped-api
