removing from overall bases, adding to all lower envs (removing prod deployment)

--- a/k8s/ithc/common-overlay/fees-pay/kustomization.yaml
+++ b/k8s/ithc/common-overlay/fees-pay/kustomization.yaml
@@ -5,6 +5,7 @@ bases:
 - ../../../namespaces/fees-pay
 - ../../../namespaces/fees-pay/namespace.yaml
 - ../../../namespaces/all-namespaces/nonprod-role.yaml
+- ../../../namespaces/fees-pay/refund-notifications-job/refund-notifications-job.yaml
 patchesStrategicMerge:
 - ../../../namespaces/fees-pay/ccpay-callback-function/ithc.yaml
 - ../../../namespaces/fees-pay/ccpay-refunds-api/ithc.yaml
