--- a/k8s/aat/common-overlay/fees-pay/kustomization.yaml
+++ b/k8s/aat/common-overlay/fees-pay/kustomization.yaml
@@ -6,6 +6,7 @@ bases:
 - ../../../namespaces/fees-pay/namespace.yaml
 - ../../../namespaces/fees-pay/ccpay-cpo-callback-function/ccpay-cpo-callback-function.yaml
 - ../../../namespaces/all-namespaces/nonprod-role.yaml
+- ../../../namespaces/fees-pay/refund-notifications-job/refund-notifications-job.yaml
 patchesStrategicMerge:
 - ../../../namespaces/fees-pay/ccpay-refunds-api/aat.yaml
 - ../../../namespaces/fees-pay/ccpay-cpo-callback-function/aat.yaml
