--- a/k8s/demo/common-overlay/fees-pay/kustomization.yaml
+++ b/k8s/demo/common-overlay/fees-pay/kustomization.yaml
@@ -7,6 +7,7 @@ bases:
 - ../../../namespaces/all-namespaces/nonprod-role.yaml
 - ../../../namespaces/fees-pay/ccpay-cpo-callback-function/ccpay-cpo-callback-function.yaml
 - ../../../namespaces/fees-pay/refund-notifications-job/refund-notifications-job.yaml
+- ../../../namespaces/fees-pay/refund-notifications-job/refund-notifications-job.yaml
 - ../../../namespaces/fees-pay/refund-notifications-job-int/refund-notifications-job-int.yaml
 - ../../../namespaces/fees-pay/ccpay-payment-api-int/ccpay-payment-api-int.yaml
 - ../../../namespaces/fees-pay/ccpay-refunds-api-int/ccpay-refunds-api-int.yaml
