Add ENABLE_PAPER_APPLICATION_MIGRATION in AAT

--- a/k8s/namespaces/nfdiv/nfdiv-case-api/aat.yaml
+++ b/k8s/namespaces/nfdiv/nfdiv-case-api/aat.yaml
@@ -12,3 +12,4 @@ spec:
         CITIZEN_UPDATE_CASE_STATE_ENABLED: true
         MIGRATE_JOINT_APP_ENABLED: true
         MIGRATE_AOS_IS_DRAFTED: true
+        ENABLE_PAPER_APPLICATION_MIGRATION: true
