--- a/apps/em/em-ped-api/em-ped-api.yaml
+++ b/apps/em/em-ped-api/em-ped-api.yaml
@@ -4,16 +4,13 @@ metadata:
   name: em-ped-api
 spec:
   releaseName: em-ped-api
+  chart:
+    git: git@github.com:hmcts/hmcts-charts
+    ref: master
+    path: stable/em-ped-api
   values:
     java:
       useInterpodAntiAffinity: true
       replicas: 2
       image: hmctspublic.azurecr.io/em/ped-api:prod-7d5e122-20220921222714 #{"$imagepolicy": "flux-system:em-ped-api"}
-  chart:
-    spec:
-      chart: em-ped-api
-      sourceRef:
-        kind: GitRepository
-        name: hmcts-charts
-        namespace: flux-system
-
+      environment:
