Add missing resources for traefik v2

--- a/apps/admin/traefik2/traefik2.yaml
+++ b/apps/admin/traefik2/traefik2.yaml
@@ -18,6 +18,13 @@ spec:
         namespace: admin
   interval: 1m
   values:
+    resources:
+      requests:
+        cpu: 300m
+        memory: 200Mi
+      limits:
+        cpu: 1000m
+        memory: 1Gi
     providers:
       kubernetesIngress:
         publishedService:
