--- a/k8s/namespaces/nfdiv/nfdiv-case-api/aat.yaml
+++ b/k8s/namespaces/nfdiv/nfdiv-case-api/aat.yaml
@@ -13,3 +13,4 @@ spec:
         MIGRATE_JOINT_APP_ENABLED: true
         MIGRATE_AOS_IS_DRAFTED: true
         ENABLE_PAPER_APPLICATION_MIGRATION: true
+        ENABLE_CONFIRM_READ_PETITION_MIGRATION: true
