Readjust cpu and memory as per avg usage on prod

--- a/apps/docmosis/docmosis/perftest.yaml
+++ b/apps/docmosis/docmosis/perftest.yaml
@@ -4,5 +4,6 @@ metadata:
   name: docmosis
 spec:
   values:
+    memoryRequests: "2Gi"
     ingressHost: docmosis.perftest.platform.hmcts.net
     image: hmctsprivate.azurecr.io/docmosis:perftest-0f5389f-273954 #{"$imagepolicy": "flux-system:perftest-docmosis"}
