--- a/k8s/namespaces/dm-store/dm-store/perftest.yaml
+++ b/k8s/namespaces/dm-store/dm-store/perftest.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   values:
     java:
+      memoryRequests: "3Gi"
       image: hmctspublic.azurecr.io/dm/store:prod-b28ee57-20220923091539 #{"$imagepolicy": "flux-system:perftest-dm-store"}
       environment:
         ENABLE_TTL: false
