--- a/k8s/namespaces/rpe/rpe-send-letter-service/prod.yaml
+++ b/k8s/namespaces/rpe/rpe-send-letter-service/prod.yaml
@@ -5,7 +5,8 @@ metadata:
 spec:
   values:
     java:
-      memoryLimits: "4096Mi"
+      memoryLimits: "4Gi"
+      memoryRequests: "1Gi"
       environment:
         SMTP_HOST: smtp.office365.com
         FTP_DOWNTIME_FROM: 16:00
