--- a/k8s/namespaces/dg/dg-docassembly/dg-docassembly.yaml
+++ b/k8s/namespaces/dg/dg-docassembly/dg-docassembly.yaml
@@ -12,9 +12,9 @@ spec:
     java:
       useInterpodAntiAffinity: true
       replicas: 2
-      memoryRequests: "512Mi"
+      memoryRequests: "1Gi"
       cpuRequests: "250m"
-      memoryLimits: "2048Mi"
+      memoryLimits: "2Gi"
       cpuLimits: "1500m"
       image: hmctspublic.azurecr.io/dg/docassembly:prod-63da25e-20220923091751 #{"$imagepolicy": "flux-system:dg-docassembly"}
       environment:
