Readjust cpu and memory as per avg usage on prod (#17987)

--- a/k8s/namespaces/rpe/rpe-send-letter-service/perftest.yaml
+++ b/k8s/namespaces/rpe/rpe-send-letter-service/perftest.yaml
@@ -1,10 +1,9 @@
 apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
-  name: camunda-api
+  name: rpe-send-letter-service
 spec:
   values:
     java:
+      memoryLimits: "4Gi"
       memoryRequests: "1Gi"
-      environment:
-        WA_AUTO_CONFIGURE_TASKS_ENABLED: true
