DFPL-837: Stage on demo

--- a/k8s/namespaces/family-public-law/fpl-case-service/demo.yaml
+++ b/k8s/namespaces/family-public-law/fpl-case-service/demo.yaml
@@ -6,6 +6,7 @@ spec:
   values:
     java:
       ingressHost: fpl-case-service-demo.service.core-compute-demo.internal
+      image: hmctspublic.azurecr.io/fpl/case-service:pr-3798-032d2bc-20220922151537 #{"$imagepolicy": "flux-system:demo-fpl-case-service"}
       environment:
         RELEASE: NOW
         GATEWAY_URL: https://gateway-ccd.demo.platform.hmcts.net
