--- a/k8s/aat/common-overlay/divorce/kustomization.yaml
+++ b/k8s/aat/common-overlay/divorce/kustomization.yaml
@@ -5,6 +5,7 @@ bases:
 - ../../../namespaces/divorce
 - ../../../namespaces/divorce/namespace.yaml
 - ../../../namespaces/all-namespaces/nonprod-role.yaml
+- ../../../namespaces/divorce/div-emca/div-emca.yaml
 patchesStrategicMerge:
 - ../../../namespaces/divorce/div-da/aat.yaml
 - ../../../namespaces/divorce/div-emca/aat.yaml
