--- a/k8s/prod/common-overlay/divorce/kustomization.yaml
+++ b/k8s/prod/common-overlay/divorce/kustomization.yaml
@@ -4,6 +4,7 @@ namespace: divorce
 bases:
 - ../../../namespaces/divorce
 - ../../../namespaces/divorce/namespace.yaml
+- ../../../namespaces/divorce/div-emca/div-emca.yaml
 patchesStrategicMerge:
 - ../../../namespaces/divorce/div-da/prod.yaml
 - ../../../namespaces/divorce/div-emca/prod.yaml
