configuration for sptribs_case_api project

--- a/apps/sptribs/base/kustomize.yaml
+++ b/apps/sptribs/base/kustomize.yaml
@@ -1,11 +1,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: sptribs
+  name: rpts
   namespace: flux-system
 spec:
-  path: ./apps/sptribs/${ENVIRONMENT}/${CLUSTER}
+  path: ./apps/sptribs/${ENVIRONMENT}/base
   postBuild:
     substitute:
       NAMESPACE: "sptribs"
-      TEAM_NOTIFICATION_CHANNEL: "special-tribunals-builds"
+      TEAM_NOTIFICATION_CHANNEL: "special-tribunals-builds""
