Nfdiv-2864 Enable paper application migration for AAT

--- a/k8s/namespaces/nfdiv/nfdiv-cron-migrate-cases/aat-00.yaml
+++ b/k8s/namespaces/nfdiv/nfdiv-cron-migrate-cases/aat-00.yaml
@@ -12,3 +12,5 @@ spec:
       environment: aat
     job:
       schedule: 0/10 7-21,0-7 * * *
+      environment:
+        ENABLE_PAPER_APPLICATION_MIGRATION: true
