div-emca nonprod fv2 files

--- a/apps/divorce/aat/base/kustomization.yaml
+++ b/apps/divorce/aat/base/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - ../../base
 patchesStrategicMerge:
+  - ../../div-emca/aat.yaml
   - ../../div-cms/aat.yaml
   - ../../div-dn/aat.yaml
   - ../../div-cos/aat.yaml
