--- a/apps/divorce/ithc/base/kustomization.yaml
+++ b/apps/divorce/ithc/base/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - ../../base
 namespace: divorce
 patchesStrategicMerge:
+  - ../../div-emca/ithc.yaml
   - ../../div-cms/ithc.yaml
   - ../../div-rfe/ithc.yaml
   - ../../div-dn/ithc.yaml
