--- a/apps/divorce/perftest/base/kustomization.yaml
+++ b/apps/divorce/perftest/base/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - ../../base
 namespace: divorce
 patchesStrategicMerge:
+  - ../../div-emca/perftest.yaml
   - ../../div-cms/perftest.yaml
   - ../../div-dn/perftest.yaml
   - ../../div-pfe/perftest.yaml
