--- a/apps/divorce/perftest/base/kustomization.yaml
+++ b/apps/divorce/perftest/base/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base
+  - ../../div-emca/div-emca.yaml
 namespace: divorce
 patchesStrategicMerge:
   - ../../div-emca/perftest.yaml
