--- a/k8s/namespaces/private-law/prl-citizen-frontend/demo.yaml
+++ b/k8s/namespaces/private-law/prl-citizen-frontend/demo.yaml
@@ -24,6 +24,21 @@ spec:
       useInterpodAntiAffinity: true
       disableTraefikTls: false
       image: hmctspublic.azurecr.io/prl/citizen-frontend:pr-130-a4dfc85-20220926103002 #{"$imagepolicy": "flux-system:demo-prl-citizen-frontend"}
+      keyVaults:
+        prl:
+          secrets:
+            - AppInsightsInstrumentationKey
+            - prl-citizen-frontend-idam-client-secret
+            - postcode-lookup-token
+            - prl-cos-idam-client-secret
+            - microservicekey-prl-cos-api
+            - microservicekey-prl-citizen-frontend
+            - system-update-user-username
+            - system-update-user-password
+            - idam-solicitor-username
+            - idam-solicitor-password
+            - launchDarkly-sdk-key
+            - citizen-upload-docs-email
       environment:
         IDAM_API_URL: https://idam-api.demo.platform.hmcts.net/o/token
         IDAM_WEB_URL: https://idam-web-public.demo.platform.hmcts.net/login
