Add dtsse to aat

--- a/clusters/aat/base/kustomization.yaml
+++ b/clusters/aat/base/kustomization.yaml
@@ -22,6 +22,7 @@ resources:
   - ../../../apps/probate/base/kustomize.yaml
   - ../../../apps/em/base/kustomize.yaml
   - ../../../apps/et/base/kustomize.yaml
+  - ../../../apps/dtsse/base/kustomize.yaml
 patches:
   - path: ../../../apps/base/kustomize.yaml
     target:
