--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -367,3 +367,9 @@ apps/ts/ @hmcts/cdm
 ### FIS
 k8s/namespaces/fis/ @hmcts/family-integration
 apps/fis/ @hmcts/family-integration
+
+### NO FAULT DIVORCE
+k8s/namespaces/dtsse/ @hmcts/rse
+k8s/**/common/dtsse/identity.yaml @hmcts/rse
+k8s/aat/cluster-**/dtsse/ @hmcts/rse
+apps/dtsse/ @hmcts/rse
