--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -368,7 +368,7 @@ apps/ts/ @hmcts/cdm
 k8s/namespaces/fis/ @hmcts/family-integration
 apps/fis/ @hmcts/family-integration
 
-### NO FAULT DIVORCE
+### DTSSE
 k8s/namespaces/dtsse/ @hmcts/rse
 k8s/**/common/dtsse/identity.yaml @hmcts/rse
 k8s/aat/cluster-**/dtsse/ @hmcts/rse
