--- a/k8s/namespaces/nfdiv/nfdiv-cron-migrate-cases/aat-00.yaml
+++ b/k8s/namespaces/nfdiv/nfdiv-cron-migrate-cases/aat-00.yaml
@@ -14,3 +14,4 @@ spec:
       schedule: 0/10 7-21,0-7 * * *
       environment:
         ENABLE_PAPER_APPLICATION_MIGRATION: true
+        ENABLE_CONFIRM_READ_PETITION_MIGRATION: true
