--- a/apps/divorce/div-emca/prod.yaml
+++ b/apps/divorce/div-emca/prod.yaml
@@ -1,13 +1,13 @@
-apiVersion: helm.fluxcd.io/v1
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: div-emca
+  namespace: divorce
 spec:
   values:
     java:
       environment:
         IDAM_API_HEALTH_URI: https://idam-api.platform.hmcts.net/health
         IDAM_API_URL: https://idam-api.platform.hmcts.net
-        VAR_TA: prod-trig3
       prometheus:
         enabled: true
