--- a/k8s/namespaces/nfdiv/nfdiv-cron-migrate-cases/aat-00.yaml
+++ b/k8s/namespaces/nfdiv/nfdiv-cron-migrate-cases/aat-00.yaml
@@ -15,3 +15,4 @@ spec:
       environment:
         ENABLE_PAPER_APPLICATION_MIGRATION: true
         ENABLE_CONFIRM_READ_PETITION_MIGRATION: true
+        MIGRATE_AOS_IS_DRAFTED: true
