add idam to small prod bootstrap and set replicas to 1

--- a/apps/idam/idam-web-public/prod.yaml
+++ b/apps/idam/idam-web-public/prod.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   values:
     java:
+      replicas: 1
       environment:
         FEDERATED_SSO: true
         GA_TRACKING_ID: "UA-122164129-4"
