--- a/clusters/prod/base/kustomization.yaml
+++ b/clusters/prod/base/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
 #  - ../../../apps/adoption/base/kustomize.yaml
 #  - ../../../apps/financial-remedy/base/kustomize.yaml
   - ../../../apps/dynatrace/base/kustomize.yaml
-#  - ../../../apps/idam/base/kustomize.yaml
+  - ../../../apps/idam/base/kustomize.yaml
 #  - ../../../apps/et/base/kustomize.yaml
 #  - ../../../apps/wa/base/kustomize.yaml
 #  - ../../../apps/divorce/base/kustomize.yaml
