--- a/apps/idam/idam-web-admin/idam-web-admin.yaml
+++ b/apps/idam/idam-web-admin/idam-web-admin.yaml
@@ -7,6 +7,7 @@ spec:
   releaseName: idam-web-admin
   values:
     java:
+      replicas: 1
       image: hmctspublic.azurecr.io/idam/web-admin:prod-9e88d8f-20220726142952
       ingressHost: idam-web-admin.platform.hmcts.net
       aadIdentityName: idam
