--- a/clusters/aat/base/kustomization.yaml
+++ b/clusters/aat/base/kustomization.yaml
@@ -23,6 +23,7 @@ resources:
   - ../../../apps/em/base/kustomize.yaml
   - ../../../apps/et/base/kustomize.yaml
   - ../../../apps/dtsse/base/kustomize.yaml
+  - ../../../apps/sptribs/base/kustomize.yaml
 patches:
   - path: ../../../apps/base/kustomize.yaml
     target:
