use master chart

--- a/apps/dtsse/dtsse-dashboard-github-ingestion/dtsse-dashboard-github-ingestion.yaml
+++ b/apps/dtsse/dtsse-dashboard-github-ingestion/dtsse-dashboard-github-ingestion.yaml
@@ -13,9 +13,9 @@ spec:
         secrets:
   chart:
     spec:
-      chart: dtsse-dashboard-github-ingestion
-      version: 0.0.1
+      chart: ./stable/dtsse-dashboard-github-ingestion
       sourceRef:
-        kind: HelmRepository
-        name: hmctspublic
+        kind: GitRepository
+        name: hmcts-charts
         namespace: flux-system
+      interval: 1m
