--- a/apps/dtsse/base/kustomization.yaml
+++ b/apps/dtsse/base/kustomization.yaml
@@ -2,5 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base
-  - ../../identity/identity.yaml
+  - ../identity/identity.yaml
 namespace: dtsse
