SIDM-7951 - Updated preview URLs

--- a/apps/idam/idam-user-dashboard/preview.yaml
+++ b/apps/idam/idam-user-dashboard/preview.yaml
@@ -11,6 +11,6 @@ spec:
       ingressHost: idam-user-dashboard.service.core-compute-preview.internal
       environment:
         STRATEGIC_SERVICE_URL: 'http://idam-api'
-        STRATEGIC_PUBLIC_URL: 'http://idam-web-public'
-        DASHBOARD_URL: 'https://idam-user-dashboard.service.core-compute-preview.internal'
-        OAUTH_CLIENT_REDIRECT: 'https://idam-user-dashboard.service.core-compute-preview.internal/oauth2/callback'
+        STRATEGIC_PUBLIC_URL: 'http://idam-web-public.service.core-compute-preview.internal'
+        DASHBOARD_URL: 'http://idam-user-dashboard.service.core-compute-preview.internal'
+        OAUTH_CLIENT_REDIRECT: 'http://idam-user-dashboard.service.core-compute-preview.internal/oauth2/callback'
