--- a/apps/dtsse/dtsse-dashboard-github-ingestion/aat/00.yaml
+++ b/apps/dtsse/dtsse-dashboard-github-ingestion/aat/00.yaml
@@ -6,6 +6,8 @@ spec:
   releaseName: dtsse-dashboard-github-ingestion
   values:
     job:
+      useInterpodAntiAffinity: true
+      image: hmctspublic.azurecr.io/dtsse/dashboard-github-ingestion:prod-847e617-20220926131648 #{"$imagepolicy": "flux-system:dtsse-dashboard-github-ingestion"}
       schedule: "0,20,40 * * * *"
     global:
       jobKind: CronJob
