div-fps demo FV2

--- a/apps/divorce/demo/base/kustomization.yaml
+++ b/apps/divorce/demo/base/kustomization.yaml
@@ -3,8 +3,10 @@ kind: Kustomization
 resources:
   - ../../base
   - ../../div-emca/div-emca.yaml
+  - ../../div-fps/div-fps.yaml
 namespace: divorce
 patchesStrategicMerge:
+  - ../../div-fps/demo.yaml
   - ../../div-emca/demo.yaml
   - ../../div-cms/demo.yaml
   - ../../div-dn/demo.yaml
