--- a/k8s/prod/common-overlay/divorce/kustomization.yaml
+++ b/k8s/prod/common-overlay/divorce/kustomization.yaml
@@ -5,6 +5,7 @@ bases:
 - ../../../namespaces/divorce
 - ../../../namespaces/divorce/namespace.yaml
 - ../../../namespaces/divorce/div-emca/div-emca.yaml
+- ../../../namespaces/divorce/div-fps/div-fps.yaml
 patchesStrategicMerge:
 - ../../../namespaces/divorce/div-da/prod.yaml
 - ../../../namespaces/divorce/div-emca/prod.yaml
