--- a/k8s/namespaces/private-law/prl-citizen-frontend/perftest.yaml
+++ b/k8s/namespaces/private-law/prl-citizen-frontend/perftest.yaml
@@ -15,8 +15,30 @@ spec:
       readinessDelay: 45
       readinessTimeout: 5
       readinessPeriod: 15
+      keyVaults:
+        prl:
+          secrets:
+            - AppInsightsInstrumentationKey
+            - prl-citizen-frontend-idam-client-secret
+            - postcode-lookup-token
+            - prl-cos-idam-client-secret
+            - microservicekey-prl-cos-api
+            - microservicekey-prl-citizen-frontend
+            - system-update-user-username
+            - system-update-user-password
+            - idam-solicitor-username
+            - idam-solicitor-password
+            - launchDarkly-sdk-key
+            - citizen-upload-docs-email
       environment:
-        FEATURE_EXAMPLE: true
+        IDAM_API_URL: https://idam-api.perftest.platform.hmcts.net/o/token
+        IDAM_WEB_URL: https://idam-web-public.perftest.platform.hmcts.net/login
+        REFORM_SERVICE_NAME: prl-citizen-frontend
+        REFORM_TEAM: prl
+        SERVICE_AUTH_PROVIDER_URL: http://rpe-service-auth-provider-perftest.service.core-compute-perftest.internal
+        CCD_URL: http://ccd-data-store-api-perftest.service.core-compute-perftest.internal
+        CDAM_API_URL: http://ccd-case-document-am-api-perftest.service.core-compute-perftest.internal
+        COS_URL: http://prl-cos-perftest.service.core-compute-perftest.internal
     global:
       environment: perftest
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
