div-fps demo FV2 fix

--- a/apps/divorce/div-fps/div-fps.yaml
+++ b/apps/divorce/div-fps/div-fps.yaml
@@ -24,3 +24,11 @@ spec:
         VAR_FV2: trig-1
       prometheus:
         enabled: true
+  chart:
+    spec:
+      chart: ./stable/div-fps
+      sourceRef:
+        kind: GitRepository
+        name: hmcts-charts
+        namespace: flux-system
+      interval: 1m
