Switch to per cluster config

--- a/apps/dtsse/base/kustomize.yaml
+++ b/apps/dtsse/base/kustomize.yaml
@@ -4,7 +4,7 @@ metadata:
   name: dtsse
   namespace: flux-system
 spec:
-  path: ./apps/dtsse/${ENVIRONMENT}/base
+  path: ./apps/dtsse/${ENVIRONMENT}/${CLUSTER}
   postBuild:
     substitute:
       NAMESPACE: "dtsse"
