div-fps nonprods FV2

--- a/apps/divorce/aat/base/kustomization.yaml
+++ b/apps/divorce/aat/base/kustomization.yaml
@@ -3,7 +3,9 @@ kind: Kustomization
 resources:
   - ../../base
   - ../../div-emca/div-emca.yaml
+  - ../../div-fps/div-fps.yaml
 patchesStrategicMerge:
+  - ../../div-fps/aat.yaml
   - ../../div-emca/aat.yaml
   - ../../div-cms/aat.yaml
   - ../../div-dn/aat.yaml
