--- a/apps/divorce/ithc/base/kustomization.yaml
+++ b/apps/divorce/ithc/base/kustomization.yaml
@@ -3,8 +3,10 @@ kind: Kustomization
 resources:
   - ../../base
   - ../../div-emca/div-emca.yaml
+  - ../../div-fps/div-fps.yaml
 namespace: divorce
 patchesStrategicMerge:
+  - ../../div-fps/ithc.yaml
   - ../../div-emca/ithc.yaml
   - ../../div-cms/ithc.yaml
   - ../../div-rfe/ithc.yaml
