--- a/apps/divorce/perftest/base/kustomization.yaml
+++ b/apps/divorce/perftest/base/kustomization.yaml
@@ -3,8 +3,10 @@ kind: Kustomization
 resources:
   - ../../base
   - ../../div-emca/div-emca.yaml
+  - ../../div-fps/div-fps.yaml
 namespace: divorce
 patchesStrategicMerge:
+  - ../../div-fps/perftest.yaml
   - ../../div-emca/perftest.yaml
   - ../../div-cms/perftest.yaml
   - ../../div-dn/perftest.yaml
