try http url for redirect

--- a/k8s/aat/common/xui/register-org-ingress.yaml
+++ b/k8s/aat/common/xui/register-org-ingress.yaml
@@ -30,5 +30,5 @@ metadata:
 spec:
   redirectRegex:
     permanent: true
-    regex: ^https://register-org.aat.platform.hmcts.net/(.*)
-    replacement: https://manage-org.aat.platform.hmcts.net/register-org/register
+    regex: ^http://register-org.aat.platform.hmcts.net/(.*)
+    replacement: http://manage-org.aat.platform.hmcts.net/register-org/register
