Try http ingress

--- a/k8s/prod/common/xui/register-org-ingress.yaml
+++ b/k8s/prod/common/xui/register-org-ingress.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: traefik
     traefik.ingress.kubernetes.io/redirect-permanent: "true"
-    traefik.ingress.kubernetes.io/redirect-regex: ^https://register-org.platform.hmcts.net/(.*)
+    traefik.ingress.kubernetes.io/redirect-regex: ^http://register-org.platform.hmcts.net/(.*)
     traefik.ingress.kubernetes.io/redirect-replacement: https://manage-org.platform.hmcts.net/register-org/register
   name: register-org-ingress
   namespace: xui
